# AgenticOS

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py  prompts.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  agent.py  agent_profiles.py  auth.py  dashboard.py  health.py  skills.py  tool_config.py  users.py
backend/app/core/: __init__.py  config.py  security.py  timezone.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  admin_stats.py  agent.py  agent_profiles.py  auth.py  base.py  conversations.py  skills.py  tool_config.py  users.py
backend/app/services/: agent_profile_service.py  agent_service.py  approval_manager.py  auth_service.py  local_skill_import_service.py  ppt_artifact_service.py  session_storage.py  skill_service.py  tool_config_service.py
backend/scripts/: import_local_skills.py
backend/tests/: test_agent_profiles.py  test_agent_service.py  test_agent_stream.py  test_auth.py  test_dashboard.py  test_health.py  test_local_skill_import_service.py  test_skills.py  test_tool_config.py  test_users.py  test_website_mode_defaults.py
data/skills/dinky-sql-skill/: SKILL.md
docs/: bigdata-agent-plan.md
frontend/: .env.example  Dockerfile  README.md  index.html  metadata.json  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/pages/: Chat.tsx  (+5 more)
(+63 files in other folders)
