[project]
name = "agenticos"
version = "0.1.0"
description = "FastAPI scaffold for AgenticOS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "wuwei>=0.1.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
